@@ -7,15 +7,17 @@
 
 4. copy the contents of the language-specs directory into /usr/share/cherrytree/language-specs
 
-5. copy only the directories (ru, it,...) and their content from the po directory into /usr/share/locale
+5. copy the contents of the styles directory into /usr/share/cherrytree/styles
 
-6. the mime type registration requires furthermore:
+6. copy only the directories (ru, it,...) and their content from the po directory into /usr/share/locale
+
+7. the mime type registration requires furthermore:
 - cherrytree.xml to /usr/share/mime/packages
 - cherrytree.mime and cherrytree.keys to /usr/share/mime-info
 - cherrytree.applications to /usr/share/application-registry
 
-7. for the command line manual, copy cherrytree.1.gz from linux folder to /usr/share/man/man1
+8. for the command line manual, copy cherrytree.1.gz from linux folder to /usr/share/man/man1
 
-8. for the software center application descriptor copy com.giuspen.cherrytree.metainfo.xml from linux folder to /usr/share/metainfo
+9. for the software center application descriptor copy com.giuspen.cherrytree.metainfo.xml from linux folder to /usr/share/metainfo
 
-9. finally the command "update-desktop-database" must be entered into the terminal
+10. finally the command "update-desktop-database" must be entered into the terminal
