@@ -10,6 +10,7 @@ GIT_CT_LANGUAGES_FOLDER="${GIT_CT_FOLDER}/po"
 GIT_CT_DATA_FOLDER="${GIT_CT_FOLDER}/data"
 GIT_CT_ICONS_FOLDER="${GIT_CT_FOLDER}/icons"
 GIT_CT_LANGUAGE_SPECS_FOLDER="${GIT_CT_FOLDER}/language-specs"
+GIT_CT_STYLES_FOLDER="${GIT_CT_FOLDER}/styles"
 GIT_CT_LICENSE="${GIT_CT_FOLDER}/license.txt"
 GIT_CT_HUNSPELL="${GIT_CT_FOLDER}/hunspell"
 GIT_CT_CONFIG_H="${GIT_CT_FOLDER}/config.h"
@@ -172,6 +173,7 @@ cp -v ${GIT_CT_LICENSE} ${NEW_ROOT_FOLDER}/
 # share data
 mkdir -p ${NEW_CHERRYTREE_SHARE}/data
 cp -rv ${GIT_CT_LANGUAGE_SPECS_FOLDER} ${NEW_CHERRYTREE_SHARE}/
+cp -rv ${GIT_CT_STYLES_FOLDER} ${NEW_CHERRYTREE_SHARE}/
 cp -v ${GIT_CT_DATA_FOLDER}/script3.js ${NEW_CHERRYTREE_SHARE}/data/
 cp -v ${GIT_CT_DATA_FOLDER}/styles3.css ${NEW_CHERRYTREE_SHARE}/data/
 # share icons
