@@ -273,7 +273,6 @@ void CtConfig::_populate_keyfile_from_data()
     _currentGroup = "table";
     _uKeyFile->set_integer(_currentGroup, "table_rows", tableRows);
     _uKeyFile->set_integer(_currentGroup, "table_columns", tableColumns);
-    _uKeyFile->set_integer(_currentGroup, "table_col_mode", static_cast<int>(tableColMode));
     _uKeyFile->set_integer(_currentGroup, "table_col_width", tableColWidth);
 
     // [fonts]
@@ -538,11 +537,6 @@ void CtConfig::_populate_data_from_keyfile()
     _currentGroup = "table";
     _populate_int_from_keyfile("table_rows", &tableRows);
     _populate_int_from_keyfile("table_columns", &tableColumns);
-    int table_col_mode;
-    if (_populate_int_from_keyfile("table_col_mode", &table_col_mode))
-    {
-        tableColMode = static_cast<CtTableColMode>(table_col_mode);
-    }
     _populate_int_from_keyfile("table_col_width", &tableColWidth);
 
     // [fonts]
