@@ -1,0 +1,160 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+ Copyright (C) 2006-2007 Will Farrington <wcfarrington@gmail.com>
+ Copyright (C) 2020 Giuseppe Penone <giuspen@gmail.com>
+
+ Free software; you can redistribute it and/or
+ modify it under the terms of the GNU Lesser General Public
+ License as published by the Free Software Foundation; either
+ version 2.1 of the License, or (at your option) any later version.
+
+ Distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ Lesser General Public License for more details.
+
+ You should have received a copy of the GNU Lesser General Public License
+ along with this library; if not, see <http://www.gnu.org/licenses/>.
+
+ Theme based on cobalt (shipped with GtkSourceView) just darkened
+-->
+
+<style-scheme id="cobalt-darkened" _name="Cobalt Darkened" version="1.0">
+  <author>Giuseppe Penone</author>
+  <_description>Darkened version of Cobalt</_description>
+
+  <!-- Colors -->
+  <color name="faded_yellow"                value="#ffee80"/>
+  <color name="bright_orange"               value="#ff9d00"/>
+  <color name="faded_orange"                value="#ffb054"/>
+  <color name="nail_polish_pink"            value="#ff0044"/>
+  <color name="neon_yellow"                 value="#ffdd00"/>
+  <color name="sky_blue"                    value="#0088ff"/>
+  <color name="teal_blue"                   value="#80ffbb"/>
+  <color name="light_blue"                  value="#0065bf"/>
+  <color name="medium_blue"                 value="#003b70"/>
+  <color name="dark_blue"                   value="#001b33"/>
+  <color name="black_blue"                  value="#000d1a"/>
+  <color name="black"                       value="#000000"/>
+  <color name="white"                       value="#ffffff"/>
+  <color name="pale_grey"                   value="#eeeeee"/>
+  <color name="steel_grey"                  value="#333333"/>
+  <color name="spring_green"                value="#3ad900"/>
+  <color name="sea_green"                   value="#00BF8C"/>
+  <color name="light_grey"                  value="#cccccc"/>
+  <color name="dark_red"                    value="#990000"/>
+  <color name="bluish_grey"                 value="#777777"/>
+  <color name="steelblue3"                  value="#4f94cd"/>
+
+  <color name="dark_medium_blue_blend"      value="#00213F"/>
+
+  <!-- Global Settings -->
+
+  <style name="text"                        foreground="white" background="black"/>
+  <style name="selection"                   foreground="white" background="sky_blue"/>
+  <style name="cursor"                      foreground="white"/>
+  <style name="current-line"                background="medium_blue"/>
+  <style name="line-numbers"                foreground="bluish_grey" background="black_blue"/>
+  <style name="draw-spaces"                 foreground="bluish_grey"/>
+  <style name="right-margin"                foreground="light_grey" background="light_grey"/>
+  <style name="background-pattern"          background="dark_medium_blue_blend"/>
+
+  <!-- Bracket Matching -->
+  <style name="bracket-match"               background="steelblue3"/>
+  <style name="bracket-mismatch"            background="dark_red"/>
+
+  <!-- Search Matching -->
+  <style name="search-match"                foreground="white" background="sea_green"/>
+
+  <!-- Bookmarks FIXME -->
+  <style name="bookmark"                    background="white"/>
+
+  <!-- Comments -->
+  <style name="def:comment"                 foreground="sky_blue" italic="true"/>
+  <style name="def:shebang"                 foreground="sky_blue" italic="true"/>
+  <style name="def:doc-comment-element"     bold="true"/>
+
+  <!-- Constants and Variables-->
+  <style name="def:constant"                foreground="faded_yellow"/>
+  <style name="def:string"                  foreground="spring_green"/>
+  <style name="def:special-char"            foreground="light_grey"/>
+  <style name="def:special-constant"        foreground="nail_polish_pink" bold="true"/>
+  <style name="def:number"                  foreground="nail_polish_pink"/>
+  <style name="def:floating-point"          foreground="nail_polish_pink"/>
+  <style name="def:boolean"                 foreground="nail_polish_pink"/>
+  <style name="def:keyword"                 foreground="bright_orange" bold="true"/>
+  <style name="def:builtin"                 foreground="bright_orange" bold="true"/>
+  <style name="def:variable"                foreground="light_grey"/>
+
+  <!-- Identifiers -->
+  <style name="def:identifier"              foreground="light_grey"/>
+  <style name="def:function"                use-style="def:identifier"/>
+
+  <!-- Statements -->
+  <style name="def:statement"               foreground="bright_orange"/>
+
+  <!-- Types -->
+  <style name="def:type"                    foreground="teal_blue"/>
+
+  <!-- Markup -->
+  <style name="def:emphasis"                bold="true"/>
+  <style name="def:strong-emphasis"         foreground="bright_orange"/>
+  <style name="def:inline-code"             foreground="light_grey"/>
+  <style name="def:insertion"               underline="single"/>
+  <style name="def:deletion"                strikethrough="true"/>
+  <style name="def:link-text"               foreground="sky_blue" italic="true"/>
+  <style name="def:link-symbol"             foreground="sky_blue" italic="true"/>
+  <style name="def:link-destination"        underline="single"/>
+  <style name="def:heading"                 foreground="teal_blue"/>
+  <style name="def:thematic-break"          foreground="teal_blue"/>
+  <style name="def:preformatted-section"    foreground="light_grey"/>
+  <style name="def:list-marker"             foreground="bright_orange"/>
+
+  <!-- Others -->
+  <style name="def:error"                   foreground="white" background="dark_red" bold="true"/>
+  <style name="def:warning"                 foreground="white" background="nail_polish_pink"/>
+  <style name="def:note"                    foreground="neon_yellow" bold="true"/>
+  <style name="def:net-address"             foreground="teal_blue" italic="false" underline="single"/>
+  <style name="def:preprocessor"            foreground="light_grey"/>
+  <style name="def:underlined"              underline="single"/>
+
+  <!-- Heading styles, uncomment to enable -->
+  <!--
+  <style name="def:heading0"                scale="5.0"/>
+  <style name="def:heading1"                scale="2.5"/>
+  <style name="def:heading2"                scale="2.0"/>
+  <style name="def:heading3"                scale="1.7"/>
+  <style name="def:heading4"                scale="1.5"/>
+  <style name="def:heading5"                scale="1.3"/>
+  <style name="def:heading6"                scale="1.2"/>
+  -->
+
+  <!-- C Styles -->
+  <style name="c:preprocessor"              foreground="teal_blue" bold="true"/>
+  <style name="c:included-file"             foreground="spring_green"/>
+  <style name="c:common-defines"            foreground="sky_blue" bold="true"/>
+
+  <!-- Diff Styles -->
+  <style name="diff:ignore"                 foreground="bluish_grey"/>
+  <style name="diff:added-line"             foreground="faded_yellow"/>
+  <style name="diff:removed-line"           foreground="spring_green"/>
+  <style name="diff:changed-line"           foreground="bright_orange"/>
+  <style name="diff:diff-file"              foreground="sky_blue" bold="true"/>
+  <style name="diff:location"               foreground="sky_blue"/>
+  <style name="diff:special-case"           foreground="nail_polish_pink" bold="true"/>
+
+  <!-- Ruby Styles -->
+  <style name="ruby:module-handler"         foreground="teal_blue"/>
+  <style name="ruby:symbol"                 foreground="nail_polish_pink"/>
+  <style name="ruby:regex"                  foreground="teal_blue"/>
+
+  <!-- SH Styles -->
+  <style name="sh:function"                 foreground="neon_yellow"/>
+
+  <!-- XML Styles -->
+  <style name="xml:attribute-name"          foreground="light_grey"/>
+  <style name="xml:element-name"            foreground="teal_blue"/>
+  <style name="xml:entity"                  foreground="neon_yellow"/>
+  <style name="xml:processing-instruction"  bold="true"/>
+
+</style-scheme>
